[package]
name = "cryptography_3"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ec_algebra = {git = "https://github.com/twertybog/ec_algebra"}
rand = "0.8.5"

[profile.dev]
overflow-checks = false
